--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,23 @@
   width: 100%;
 }
 .tbl{
-  
+  border: 1px solid wheat;
   background-color: plum;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 250px;
+  width: 270px;
+  height: 4px;
 }
 .df{
   margin: 10px 0;
   border: 0;
   background-color: transparent;
   cursor: pointer;
+}
+.tbr{
+  border: 1px solid wheat;
+  background-color: plum;
+  width: 250px;
 }
